--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,35 @@
+<html>
+	<head>
+		<style>
+			body {
+				font-family: sans-serif;
+			}
+		</style>
+	</head>
+
+	<body>
+		<form action="/eu" method="GET">
+			<input type="submit" name="button" value="Skatīt tikai Eiropas Savienību">
+		</form>
+
+		<center>
+			<img src="static/image/chart.png">
+			<p>Diagramma:</p>
+
+			<form action="/" method="POST">
+				<input type="submit" name="button" value="H. stabiņu">
+				<input type="submit" name="button" value="V. stabiņu">
+				<input type="submit" name="button" value="Sektoru">
+			</form>
+
+			<form action="/" method="POST">
+				<input type="submit" name="button" value="Histogramma">
+			</form>
+
+			<p>Lejupielādēt CSV:</p>
+
+			<a href="/download">dataset.csv</a>
+		</center>
+	</body>
+</html>
 
